--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,20 @@
   color: white;
 }
 
+.App-body {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-image: url(./back.png);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #333;
+}
+
 .App-title {
   font-size: 1.5em;
 }
@@ -26,3 +40,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.table {
+  margin: auto;
+  width: 50% !important;
+  background-color: #333;
+} 
